--- a/index.html
+++ b/index.html
@@ -150,73 +150,111 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </article>
+                    <a href="#">Afficher plus</a>
                 </div>
-            </div>   
+            </div>
             <div class="populaires">
-                <aside>
+                <div class="popuh2">
                     <h2>Les plus populaires</h2>
+                <div class="logopopu">
                     <i class="fas fa-chart-line"></i>
+                </div>
+                </div>
+                <aside>
                     <article>
                         <img src="assets/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin" />
-                        <h3>Hôtel Le soleil du matin</h3>
-                        <p>Nuit à partir de 128€</p>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
+                        <div class="popuarticle">
+                            <h3>Hôtel Le soleil du matin</h3>
+                            <p>Nuit à partir de 128€</p>
+                            <div class="popuetoile">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
                     </article>
                     <article>
                         <img src="assets/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes" />
-                        <h3>Au coeur de l'eau Chambres d'hôtes</h3>
-                        <p>Nuit à partir de 71€</p>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
+                        <div class="popuarticle">
+                            <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                            <p>Nuit à partir de 71€</p>
+                            <div class="popuetoile2">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                        </div>
                     </article>
                     <article>
                         <img src="assets/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Tout bleu et Blanc" />
-                        <h3>Hôtel Tout bleu et Blanc</h3>
-                        <p>Nuit à partir de 68€</p>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
+                        <div class="popuarticle">
+                            <h3>Hôtel Tout bleu et Blanc</h3>
+                            <p>Nuit à partir de 68€</p>
+                            <div class="popuetoile3">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </div>
+                        </div>
                     </article>
                 </aside>
             </div>
         </section>
         <!--activités-->
         <section class="activités" id="activités">
-            <h2>Activités à Marseille</h2>
-            <article>
-                <img src="assets/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port" />
-                <h3>Vieux Port</h3>
-            </article>
-            <article>
-                <img src="assets/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues" />
-                <h3>Fort de Pomègues</h3>
-            </article>
-            <article>
-                <img src="assets/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul" />
-                <h3>Îles du Frioul</h3>
-            </article>
-            <article>
-                <img src="assets/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques" />
-                <h3>Parc National des Calanques</h3>
-            </article>
-            <article>
-                <img src="assets/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde" />
-                <h3>Notre-Dame-de-la-Garde</h3>
-            </article>
-            <article>
-                <img src="assets/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp" />
-                <h3>Parc Longchamp</h3>
-            </article>
-
+            <div class="boite2">
+                <div class="activitésh2">
+                    <h2>Activités à Marseille</h2>
+                </div>
+                <div class="activitésarticle">
+                    <div class="activitésarticle1">
+                        <article>
+                            <img src="assets/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port" />
+                            <h3>Vieux Port</h3>
+                        </article>
+                    </div>
+                    <div class="p2">
+                        <div class="activitésarticle2">
+                            <article>
+                                <img src="assets/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues" />
+                                <h3>Fort de Pomègues</h3>
+                            </article>
+                        </div>
+                        <div class="activitésarticle3">
+                            <article>
+                                <img src="assets/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul" />
+                                <h3>Îles du Frioul</h3>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="activitésarticle4">
+                        <article>
+                            <img src="assets/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques" />
+                            <h3>Parc National des Calanques</h3>
+                        </article>
+                    </div>
+                    <div class="4">
+                        <div class="activitésarticle5">
+                            <article>
+                                <img src="assets/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde" />
+                                <h3>Notre-Dame-de-la-Garde</h3>
+                            </article>
+                        </div>
+                        <div class="activitésarticle6">
+                            <article>
+                                <img src="assets/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp" />
+                                <h3>Parc Longchamp</h3>
+                            </article>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <!--main-->
